--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust_py"
+name    = "rust_py"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,3 +11,4 @@ features = ["extension-module"]
 
 [lib]
 crate-type = ["cdylib"]
+path       = "rust_src/lib.rs"
